--- a/bhoma/xforms/bhoma_sick_pregnancy.xhtml
+++ b/bhoma/xforms/bhoma_sick_pregnancy.xhtml
@@ -280,6 +280,7 @@
 	<item><label>Unconscious / Lethargic</label><value>unconscious</value></item>	
 	<item><label>Severe Shortness of Breath</label><value>short_breath</value></item>
     <item><label>SBP &lt; 90</label><value>sbp</value></item>
+	<item><label>No Fetal Movement</label><value>no_fetal_mvmt</value></item>
 	<item><label>No Danger Signs</label><value>none</value></item>
 	<item><label>Section Left Blank</label><value>blank</value></item>
   </select>
@@ -472,7 +473,7 @@
     <label>Symptoms of Fever</label>
     <item><label>SEVERE: sbp &lt;= 90</label><value>sev_sbp</value></item>
     <item><label>SEVERE: rr &gt;= 20</label><value>sev_rr</value></item>
-    <item><label>SEVERE: mat hr &gt;= 100</label><value>sev_hr</value></item>
+    <item><label>SEVERE: mat hr &gt;= 100 bpm</label><value>sev_hr</value></item>
     <item><label>SEVERE: altered mental status</label><value>sev_altered</value></item>
     <item><label>SEVERE: headache/neck stiffness</label><value>sev_headache</value></item>
     <item><label>SEVERE: foul vaginal discharge</label><value>sev_foul_vag_discharge</value></item>
@@ -1014,9 +1015,9 @@
   <select1 ref="resolution">
     <label>What is the Conclusion of this Case?</label>
 	<item><label>Follow Up PRN / Routine Antenatal Care</label><value>case_closed</value></item>
+	<item><label>Mother Death / Fetal Death / Loss of Pregnancy</label><value>death</value></item>
 	<item><label>Referral to Hospital / Specialist</label><value>referral</value></item>
     <item><label>Follow Up with the Health Facility</label><value>followup</value></item>
-	<item><label>Death</label><value>death</value></item>
 	<item><label>Section Left Blank</label><value>blank</value></item>
 	<hint> Select a conculsion for this case </hint>
   </select1>
