--- a/bhoma/xforms/bhoma_delivery.xhtml
+++ b/bhoma/xforms/bhoma_delivery.xhtml
@@ -141,6 +141,7 @@
             </med>
           </dispensed>
         </drugs>
+		<other_treatment />
         <resolution />
 		<death_details />
         <followup_days />
@@ -253,6 +254,7 @@
     <bind nodeset="drugs/dispensed/med/uncommon/freq" required="true()" /> <!-- make select? -->
     <bind nodeset="drugs/dispensed/med/uncommon/freq_other" type="int" relevant="../freq = 'other'" /> <!-- make select? -->
     <bind nodeset="drugs/dispensed/med/uncommon/duration" type="int" /> <!-- make select? -->
+    <bind nodeset="other_treatment" required="true()" constraint="not(selected(., 'blank') and count-selected(.) &gt; 1)" jr:constraintMsg="Cant select 'No Other Treatments' and another answer" />
     <bind nodeset="resolution" relevant="../continue_form = 'y'" required="true()" />
 	<bind nodeset="death_details" required="true()" relevant="../resolution = 'death'" constraint="not(selected(., 'blank') and count-selected(.) &gt; 1)" jr:constraintMsg="Cant select 'Both Boxes Left Blank' and another answer"/>
     <bind nodeset="followup_days" type="int" relevant="../resolution = 'followup'" />    
@@ -1084,6 +1086,14 @@
 
   </repeat>
   </group>
+
+  <select ref="other_treatment">
+    <label>Select Other Applicable Treatments:</label>
+    <item><label>Oxygen</label><value>oxygen</value></item>
+    <item><label>Fluids</label><value>fluids</value></item>
+    <item><label>No Other Treatments, Oxygen and Fluids Blank</label><value>blank</value></item>
+	<hint> Select any other items under the Treatments section, like Oxygen or Fluids.  If none are listed, select 'No Other Treatments'</hint>
+  </select>
 
   <select1 ref="resolution">
     <label>What is the Conclusion of this Case?</label>
