removal of outcome causing system to crash - reinstated temporarily removed fifth drug drill down fixed a bit of drill down relevancy logic

--- a/bhoma/xforms/bhoma_pregnancy.xhtml
+++ b/bhoma/xforms/bhoma_pregnancy.xhtml
@@ -297,7 +297,7 @@
   </select1>
 
   <select ref="pmtct">
-    <label>Which PMTCT Medicine is the Patient Taking?</label>
+    <label>Select PMTCT Medicine Given?</label>
     <item><label>AZT</label><value>azt</value></item>
     <item><label>NVP</label><value>nvp</value></item>
 	<item><label>Question Left Blank</label><value>blank</value></item>	
